<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Two Phone Call Forward</string>
    <string name="bluetooth_device_selection">Select Bluetooth Device</string>
    <string name="connect_device">Connect Device</string>
    <string name="disconnect_device">Disconnect Device</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="end_call">End Call</string>
    <string name="contacts">Contacts</string>
    <string name="call">Call</string>
    <string name="status">Status</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="searching_devices">Searching for devices...</string>
    <string name="refresh">Refresh</string>
</resources>
